# lsystem-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: adapter-contract.md  execution-report-2026-04-29.md  koch-snowflake.md  lsystem-fractal-plant.md
harness/: __init__.py  run_demo.py
harness/resolvers/: __init__.py  apply_rules.py  emit_to_canvas.py  expand_brackets.py  prism_decomposer.py  seed.py
prism/: bushy-tree.prism.md  koch-snowflake.prism.md  lsystem-fractal-plant.prism.md
