[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsystem-demo"
version = "0.1.0"
description = "L-system composition demo: PRISM-IR + 8OS + simdecisions turtledraw"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Q88N" }]
dependencies = [
  "pyyaml>=6.0",
  "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
"lsystem-demo" = "harness.run_demo:main"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.ruff]
line-length = 100
target-version = "py313"
